...

            <Button
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Filter"
                android:drawableLeft="@drawable/ic_filter_list_white_24dp"
                android:drawablePadding="@dimen/default_padding"
                android:layout_margin="@dimen/default_margin"
                android:onClick="@{viewModel::onFilterTouched}"/>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_teams"
            app:teams="@{viewModel.teams}"
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
...
