<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.vsossella.mvvmapp.ui.team.model.Team" />
    </data>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_height"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            tools:text="Grêmio"
            android:textStyle="bold"
            android:textSize="@dimen/default_bigger_text_size"
            android:text="@{viewModel.teamName}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Porto Alegre"
            android:textSize="@dimen/default_small_text_size"
            android:text="@{viewModel.city}"/>

    </LinearLayout>

</layout>

